<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myApplication.teamCreator.ShowTeamMembersActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayoutTeams"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:text="@string/team_placeHOlder"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="-10dp"
            android:background="@drawable/rounded_corner"
            android:id="@+id/teamMembersHeader" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:text="@string/sf_placeHolder"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/rounded_corner"
            android:id="@+id/averageTeamStrength" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/rounded_corner_lightblue"
            android:gravity="center"
            android:text="@string/player_skill_level"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamMembersRecyclerView"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_below="@id/relLayoutTeams"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/goBackTeamsOverView"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/rounded_corner"
            android:contentDescription="@string/addplayerimagebutton"
            android:src="@drawable/arrowback_image" />

    </RelativeLayout>
</RelativeLayout>