<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:text="@string/add_player_header"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="-10dp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/addPlayerTitle" />


    <EditText
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPlayerTitle"
        android:layout_marginTop="10dp"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textColor="@color/maincolor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/selectDefaultStrengthTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerName"
        android:layout_marginStart="5dp"
        android:text="@string/set_default_strengthTxt"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:padding="2dp"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/playerDefaultStrengthSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/selectDefaultStrengthTxt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/finalAddPlayerButton"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/updateplayer_image" />

    </RelativeLayout>
</RelativeLayout>